--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,25 @@
 # main links links
 main:
+  - title: "About Me"
+    url: /#
+  
   - title: "Publications"
-    url: /publications/
+    url: /#publications
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Industry"
+    url: /#industry-experience  
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /#teaching-experience  
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /#cv
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
