added google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : ""
 title_separator          : ""
 name                     : &name "Jordan Taylor"
-description              : &description "Academic Website"
+description              : &description "Jordan Taylor"
 url                      : https://jtaylor.gay # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jtaylor351/jtaylor351.github.io"
