--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "Jordan Taylor"
 title_separator          : ""
 name                     : &name "Jordan Taylor"
-description              : &description "Jordan Taylor"
+description              : &description "Researcher at the intersection of Social Computing, AI, and Mental Health"
 url                      : https://jtaylor.gay # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jtaylor351/jtaylor351.github.io"
-teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+teaser                   :  "/images/profile.jpg" # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -63,7 +63,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 :  # Open Graph/Twitter default site image
+og_image                 :  "/images/profile.jpg" # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
