--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jordan Taylor"
 title_separator          : ""
 name                     : "Jordan Taylor"
-description              : "Researcher at the intersection of Social Computing, AI, and Mental Health"
+description              : "Jordan Taylor is a researcher at the intersection of Social Computing, AI, and Mental Health"
 url                      : https://jtaylor.gay # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jtaylor351/jtaylor351.github.io"
