--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,25 +1,19 @@
 # main links links
 main:
-  - title: "About Me"
+  - title: ""
     url: /#
   
+  - title: "About Us"
+    url: /#about-us
+
   - title: "Publications"
     url: /#publications
 
-  - title: "Industry"
-    url: /#industry-experience  
+  - title: "Press"
+    url: /#press  
 
-  - title: "Teaching"
-    url: /#teaching-experience  
-    
-  # - title: "Portfolio"
-  #   url: /portfolio/
-        
-  - title: "Talks"
-    url: /#talks--panels
-    
-  - title: "CV"
-    url: /#cv
-    
-  # - title: "Guide"
-  #   url: /markdown/
+  - title: "Grants"
+    url: /#grants
+
+  - title: "Courses"
+    url: /#counrses
