--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ analytics:
 # Site Author
 author:
   name             : "C4SGE Group"
-  avatar           : "USAUSAUSA.jpeg" image in /images dir
+  avatar           : "USAUSAUSA.jpeg"
   bio              : # "Description"
   location         :  
   employer         :
