--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "C4SGE Group"
+  name             : "C4SG Group"
   avatar           : "USAUSAUSA.jpeg"
   bio              : # "Description"
   location         :  
