--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,7 @@ author:
   steam            :
   tumblr           :
   twitter          : "nprandchill"
+  bluesky          : "jordant.bsky.social"
   vine             :
   weibo            :
   xing             :
