--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jordan Taylor"
 title_separator          : ""
 name                     : "Jordan Taylor"
-description              : "Jordan Taylor is a researcher at the intersection of Critical Social Computing and Identity"
+description              : "Jordan Taylor is a Critical Computing Researcher"
 url                      : https://jtaylor.gay # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "jtaylor351/jtaylor351.github.io"
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Jordan Taylor<br/>(he / him / his)"
   avatar           : "profile.jpg"
-  bio              : "Social Computing + Identity + Knowledge Construction"
+  bio              : 
   location         :  
   employer         :
   pubmed           : 
