--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jordan Taylor"
+  name             : "Jordan Taylor <br/> <br/>"
   avatar           : "profile.jpg"
   bio              : 
   location         :  
